--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
       testClass.set(key, value);
       // レコードをデータベースに登録
       testClass.save();
-      $("#message").html("btnA clicked !");
+      $("#message").html("送信btn clicked !");
     }
 
     function btnBClick(e) {
@@ -56,19 +56,30 @@
     </script>
 </head>
 <body>
-  <h1>Registration sample</h1>
+  <h1>　　　名前付け</h1>
   <div>
     <label for="key">Key:</label>
     <input id="key" type="text" value="message">
   </div>
   <div>
-    <label for="value">Value:</label>
-    <input id="value" type="text" value="Hello, mBaaS!">
+    <label for="value">Name:</label>
+    <input id="value" type="text" value="">
   </div>
   <div id="button">
-    <button id="btnA" class="btn">Register1</button>
-    <button id="btnB" class="btn">Register2</button>
+    <button id="btnA" class="btn">送信</button>
+    
   </div>
   <div id="message"></div>
+  <div id="button">
+    <button id="btnA"
+    class="btn">buttonA</button>
+  
+    <button id="btnB"
+    class="btn">buttonB</button>
+  </div>
+  <div id="gazou">
+    <img id="awa" src="images/party_awa.png" />
+    <img id="haitatsu" src="images/job_gyunyu_haitatsu.png" />
+  </div>
 </body>
 </html>
