imagesフォルダに画像を入れたボタンの名前を変更

--- a/www/index.html
+++ b/www/index.html
@@ -71,11 +71,11 @@
   </div>
   <div id="message"></div>
   <div id="button">
-    <button id="btnA"
-    class="btn">buttonA</button>
+    <button id="btn1"
+    class="btn">button1</button>
   
-    <button id="btnB"
-    class="btn">buttonB</button>
+    <button id="btn2"
+    class="btn">button2</button>
   </div>
   <div id="gazou">
     <img id="awa" src="images/party_awa.png" />
