--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,7 @@
       $("#message").html("initialized");
       $("#btnA").click(function(e){
         btnAClick(e);
+        
       })
       $("#btnB").click(function(e){
         btnBClick(e);
@@ -56,7 +57,7 @@
     </script>
 </head>
 <body>
-  <h1>　　　名前付け</h1>
+  <h1>　　ツッコミ入れて！</h1>
   <div>
     <label for="key">Key:</label>
     <input id="key" type="text" value="message">
